--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
+    <link rel="shortcut icon" href="icon.jpg" type="image/x-icon">
     <title>Calculator</title>
   </head>
   <body>
